syntax = "proto3";

package Protos;

message SensorData {
    string topic = 1;
    float heart_rate = 2;
    float oxygen = 3;
    float acc_x = 4;
    float acc_y = 5;
    float acc_z = 6;
    float gyro_x = 7;
    float gyro_y = 8;
    float gyro_z = 9;
}
